hey yaaaaaa, hey yaaaaaaaa, just fixing up  surveu

--- a/_includes/nav_data.html
+++ b/_includes/nav_data.html
@@ -1,6 +1,6 @@
 <table>
     <tr>
         <td><img src="/images/logo.png" height="60"  title="Data" alt=""></td>
-        <td><a href="https://www.teamcheeseatimetime.tk/api/customer">Customer Service Survey</a></td>
+        <td><a href="https://github.com/LoveMyDogs/teamcheesep3t8/blob/ecd72414d70f2debc80c61212cb0477e17a0a15f/_posts/2022-10-22-customer-questions.md">Customer Service Survey</a></td>
     </tr>
 </table>
